--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "mongoose": "^8.0.0",
-    "next": "14.0.2",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.13.0",
